--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,8 @@
       "@contact/auth/feature": ["libs/auth/feature/src/index.ts"],
       "@contact/meet/feature": ["libs/meet/feature/src/index.ts"],
       "@contact/shared/data-access": ["libs/shared/data-access/src/index.ts"],
+      "@contact/shared/ui-layout": ["libs/shared/ui-layout/src/index.ts"],
+      "@contact/shared/util-media": ["libs/shared/util-media/src/index.ts"],
       "@contact/type": ["libs/type/src/index.ts"],
       "@contact/user/data-access": ["libs/user/data-access/src/index.ts"],
       "@contact/user/feature": ["libs/user/feature/src/index.ts"]
