--- a/libs/shared/ui-layout/.eslintrc.json
+++ b/libs/shared/ui-layout/.eslintrc.json
@@ -20,6 +20,12 @@
             "prefix": "contact",
             "style": "kebab-case"
           }
+        ],
+        "@angular-eslint/component-class-suffix": [
+          "error",
+          {
+            "suffixes": ["Component", "Container", "Dialog"]
+          }
         ]
       },
       "extends": [
