--- a/libs/user/feature/.eslintrc.json
+++ b/libs/user/feature/.eslintrc.json
@@ -24,7 +24,7 @@
         "@angular-eslint/component-class-suffix": [
           "error",
           {
-            "suffixes": ["Component", "Container", "Dialog"]
+            "suffixes": ["Shell", "Component", "Container", "Dialog"]
           }
         ]
       },
