feat: facade generator

--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4",
     "tslib": "^2.3.0",
     "typeorm": "^0.3.11",
     "zone.js": "~0.11.4"
@@ -53,6 +55,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@nrwl/cypress": "15.5.1",
+    "@nrwl/devkit": "15.5.1",
     "@nrwl/eslint-plugin-nx": "15.5.1",
     "@nrwl/jest": "15.5.1",
     "@nrwl/linter": "15.5.1",
@@ -64,7 +67,7 @@
     "@types/audioworklet": "^0.0.36",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "28.1.1",
-    "@types/node": "18.7.1",
+    "@types/node": "16.11.7",
     "@types/offscreencanvas": "^2019.7.0",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
