--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@contact/auth/data-access": ["libs/auth/data-access/src/index.ts"],
       "@contact/auth/feature": ["libs/auth/feature/src/index.ts"],
+      "@contact/client/types": ["libs/client/types/src/index.ts"],
       "@contact/inter/types": ["libs/inter/types/src/index.ts"],
       "@contact/meet/feature": ["libs/meet/feature/src/index.ts"],
       "@contact/server/types": ["libs/server/types/src/index.ts"],
