--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,13 +22,15 @@
       ],
       "@contact/client/feature-home": ["libs/client/feature-home/src/index.ts"],
       "@contact/client/feature-meet": ["libs/client/feature-meet/src/index.ts"],
+      "@contact/client/shared/ui-layout": [
+        "libs/client/shared/ui-layout/src/index.ts"
+      ],
       "@contact/client/types": ["libs/client/types/src/index.ts"],
       "@contact/inter/types": ["libs/inter/types/src/index.ts"],
       "@contact/meet/data-access": ["libs/meet/data-access/src/index.ts"],
       "@contact/meet/feature": ["libs/meet/feature/src/index.ts"],
       "@contact/server/types": ["libs/server/types/src/index.ts"],
       "@contact/shared/data-access": ["libs/shared/data-access/src/index.ts"],
-      "@contact/shared/ui-layout": ["libs/shared/ui-layout/src/index.ts"],
       "@contact/shared/util-media": ["libs/shared/util-media/src/index.ts"],
       "@contact/type": ["libs/type/src/index.ts"],
       "@contact/user/data-access": ["libs/user/data-access/src/index.ts"],
