--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -34,6 +34,9 @@
       "@contact/client/shared/ui-meet": [
         "libs/client/shared/ui-meet/src/index.ts"
       ],
+      "@contact/client/shared/ui-user": [
+        "libs/client/shared/ui-user/src/index.ts"
+      ],
       "@contact/client/types": ["libs/client/types/src/index.ts"],
       "@contact/server/types": ["libs/server/types/src/index.ts"],
       "@contact/shared/data-access": ["libs/shared/data-access/src/index.ts"],
